java/delete.log
Building Rust with target: 'aarch64-unknown-linux-gnu.2.17'
> Task :client:generateEffectiveLombokConfig UP-TO-DATE
> Task :client:protobuf
> Task :client:compileJava UP-TO-DATE
> Task :client:processResources NO-SOURCE
> Task :client:classes UP-TO-DATE

> Task :client:buildRust FAILED
[1m[33mwarning[0m[1m: unused import: `crate::cluster_async::MUTEX_READ_ERR`[0m
 [1m[94m--> [0m/home/ubuntu/glide-for-redis/glide-core/redis-rs/redis/src/cluster_async/pipeline_routing.rs:4:5
  [1m[94m|[0m
[1m[94m4[0m [1m[94m|[0m use crate::cluster_async::MUTEX_READ_ERR;
  [1m[94m|[0m     [1m[33m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m
  [1m[94m|[0m
  [1m[94m= [0m[1mnote[0m: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

[1m[33mwarning[0m[1m: unused imports: `Mutex` and `mem`[0m
  [1m[94m--> [0m/home/ubuntu/glide-for-redis/glide-core/redis-rs/redis/src/cluster_async/mod.rs:59:14
   [1m[94m|[0m
[1m[94m59[0m [1m[94m|[0m     fmt, io, mem,
   [1m[94m|[0m              [1m[33m^^^[0m
[1m[94m...[0m
[1m[94m64[0m [1m[94m|[0m         Arc, Mutex,
   [1m[94m|[0m              [1m[33m^^^^^[0m

[1m[33mwarning[0m[1m: unused import: `MUTEX_READ_ERR`[0m
  [1m[94m--> [0m/home/ubuntu/glide-for-redis/glide-core/redis-rs/redis/src/commands/cluster_scan.rs:44:81
   [1m[94m|[0m
[1m[94m44[0m [1m[94m|[0m use crate::cluster_async::{ClusterConnInner, Connect, InnerCore, RefreshPolicy, MUTEX_READ_ERR};
   [1m[94m|[0m                                                                                 [1m[33m^^^^^^^^^^^^^^[0m

[1m[33mwarning[0m[1m: constant `MUTEX_READ_ERR` is never used[0m
   [1m[94m--> [0m/home/ubuntu/glide-for-redis/glide-core/redis-rs/redis/src/cluster_async/mod.rs:126:18
    [1m[94m|[0m
[1m[94m126[0m [1m[94m|[0m pub(crate) const MUTEX_READ_ERR: &str = "Failed to obtain read lock. Poisoned mutex?";
    [1m[94m|[0m                  [1m[33m^^^^^^^^^^^^^^[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mnote[0m: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

[1m[33mwarning[0m[1m: constant `MUTEX_WRITE_ERR` is never used[0m
   [1m[94m--> [0m/home/ubuntu/glide-for-redis/glide-core/redis-rs/redis/src/cluster_async/mod.rs:127:7
    [1m[94m|[0m
[1m[94m127[0m [1m[94m|[0m const MUTEX_WRITE_ERR: &str = "Failed to obtain write lock. Poisoned mutex?";
    [1m[94m|[0m       [1m[33m^^^^^^^^^^^^^^^[0m

[1m[33mwarning[0m: `redis` (lib) generated 5 warnings (run `cargo fix --lib -p redis` to apply 3 suggestions)
[1m[33mwarning[0m[1m: unused import: `sleep`[0m
  [1m[94m--> [0m/home/ubuntu/glide-for-redis/glide-core/src/client/mod.rs:25:25
   [1m[94m|[0m
[1m[94m25[0m [1m[94m|[0m use std::thread::{self, sleep};
   [1m[94m|[0m                         [1m[33m^^^^^[0m
   [1m[94m|[0m
   [1m[94m= [0m[1mnote[0m: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

[1m[33mwarning[0m: `glide-core` (lib) generated 1 warning (run `cargo fix --lib -p glide-core` to apply 1 suggestion)
[1m[92m   Compiling[0m glide-rs v0.1.0 (/home/ubuntu/glide-for-redis/java)
[1m[33mwarning[0m[1m: unnecessary parentheses around `if` condition[0m
   [1m[94m--> [0msrc/jni_client.rs:140:19
    [1m[94m|[0m
[1m[94m140[0m [1m[94m|[0m                 if(metrics.num_workers() > 1) {
    [1m[94m|[0m                   [1m[33m^[0m                         [1m[33m^[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mnote[0m: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
[1m[96mhelp[0m: remove these parentheses
    [1m[94m|[0m
[1m[94m140[0m [91m- [0m                if[91m([0mmetrics.num_workers() > 1[91m)[0m {
[1m[94m140[0m [92m+ [0m                if[92m [0mmetrics.num_workers() > 1 {
    [1m[94m|[0m

[1m[91merror[E0277][0m[1m: the trait bound `impl futures::Future<Output = std::string::String>: Into<JNIString>` is not satisfied[0m
    [1m[94m--> [0msrc/lib.rs:760:35
     [1m[94m|[0m
 [1m[94m760[0m [1m[94m|[0m                 Ok(env.new_string(hash)?)
     [1m[94m|[0m                        [1m[94m----------[0m [1m[91m^^^^[0m [1m[91mthe trait `AsRef<str>` is not implemented for `impl futures::Future<Output = std::string::String>`[0m
     [1m[94m|[0m                        [1m[94m|[0m
     [1m[94m|[0m                        [1m[94mrequired by a bound introduced by this call[0m
     [1m[94m|[0m
     [1m[94m= [0m[1mnote[0m: required for `JNIString` to implement `From<impl futures::Future<Output = std::string::String>>`
     [1m[94m= [0m[1mnote[0m: required for `impl futures::Future<Output = std::string::String>` to implement `Into<JNIString>`
[1m[92mnote[0m: required by a bound in `JNIEnv::<'local>::new_string`
    [1m[94m--> [0m/home/ubuntu/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/jni-0.21.1/src/wrapper/jnienv.rs:1645:26
     [1m[94m|[0m
[1m[94m1645[0m [1m[94m|[0m     pub fn new_string<S: Into<JNIString>>(&self, from: S) -> Result<JString<'local>> {
     [1m[94m|[0m                          [1m[92m^^^^^^^^^^^^^^^[0m [1m[92mrequired by this bound in `JNIEnv::<'local>::new_string`[0m

[1m[91merror[E0308][0m[1m: mismatched types[0m
    [1m[94m--> [0msrc/lib.rs:2325:33
     [1m[94m|[0m
[1m[94m2322[0m [1m[94m|[0m   [1m[94m...[0m                   match glide_core::cluster_scan_container::get_cluster_scan_cursor(
     [1m[94m|[0m [1m[94m _____________________________-[0m
[1m[94m2323[0m [1m[94m|[0m [1m[94m|[0m [1m[94m...[0m                       cursor_str,
[1m[94m2324[0m [1m[94m|[0m [1m[94m|[0m [1m[94m...[0m                   ) {
     [1m[94m|[0m [1m[94m|_______________________-[0m [1m[94mthis expression has type `impl futures::Future<Output = Result<ScanStateRC, RedisError>>`[0m
[1m[94m2325[0m [1m[94m|[0m   [1m[94m...[0m                       Ok(cursor) => cursor,
     [1m[94m|[0m                             [1m[91m^^^^^^^^^^[0m [1m[91mexpected future, found `Result<_, _>`[0m
     [1m[94m|[0m
     [1m[94m= [0m[1mnote[0m: expected opaque type `[1m[35mimpl futures::Future<Output = Result<ScanStateRC, RedisError>>[0m`
                       found enum `[1m[35mResult<_, _>[0m`
[1m[96mhelp[0m: consider `await`ing on the `Future`
     [1m[94m|[0m
[1m[94m2324[0m [1m[94m| [0m                            )[92m.await[0m {
     [1m[94m|[0m                              [92m++++++[0m

[1m[91merror[E0308][0m[1m: mismatched types[0m
    [1m[94m--> [0msrc/lib.rs:2326:33
     [1m[94m|[0m
[1m[94m2322[0m [1m[94m|[0m   [1m[94m...[0m                   match glide_core::cluster_scan_container::get_cluster_scan_cursor(
     [1m[94m|[0m [1m[94m _____________________________-[0m
[1m[94m2323[0m [1m[94m|[0m [1m[94m|[0m [1m[94m...[0m                       cursor_str,
[1m[94m2324[0m [1m[94m|[0m [1m[94m|[0m [1m[94m...[0m                   ) {
     [1m[94m|[0m [1m[94m|_______________________-[0m [1m[94mthis expression has type `impl futures::Future<Output = Result<ScanStateRC, RedisError>>`[0m
[1m[94m2325[0m [1m[94m|[0m   [1m[94m...[0m                       Ok(cursor) => cursor,
[1m[94m2326[0m [1m[94m|[0m   [1m[94m...[0m                       Err(e) => {
     [1m[94m|[0m                             [1m[91m^^^^^^[0m [1m[91mexpected future, found `Result<_, _>`[0m
     [1m[94m|[0m
     [1m[94m= [0m[1mnote[0m: expected opaque type `[1m[35mimpl futures::Future<Output = Result<ScanStateRC, RedisError>>[0m`
                       found enum `[1m[35mResult<_, _>[0m`
[1m[96mhelp[0m: consider `await`ing on the `Future`
     [1m[94m|[0m
[1m[94m2324[0m [1m[94m| [0m                            )[92m.await[0m {
     [1m[94m|[0m                              [92m++++++[0m

[1mSome errors have detailed explanations: E0277, E0308.[0m
[1mFor more information about an error, try `rustc --explain E0277`.[0m
[1m[33mwarning[0m: `glide-rs` (lib) generated 1 warning
[1m[91merror[0m: could not compile `glide-rs` (lib) due to 3 previous errors; 1 warning emitted

[Incubating] Problems report is available at: file:///home/ubuntu/glide-for-redis/java/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':client:buildRust'.
> Process 'command 'cargo'' finished with non-zero exit value 101

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14.3/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
4 actionable tasks: 2 executed, 2 up-to-date
